# peach-loop

./: .gitignore  AGENTS.md  BOOTSTRAP_COMPLETE.md  BOOTSTRAP_PROMPT.md  Makefile  README.md  RUNBOOK.md  launch.sh  pyproject.toml
configs/: base.yaml  phase1.yaml
configs/phase2/: sweep.yaml
docs/: decisions.md
scripts/: resume_test.py  run_all.py  smoke_test.py
src/peach_loop/: __init__.py  config.py
src/peach_loop/ops/: __init__.py  checkpoint.py  digest.py  logger.py  state.py  tier1.py  tier2.py
src/peach_loop/phase1/: __init__.py  dataset.py  enrichment.py  evaluate.py  report.py  run.py  train.py
src/peach_loop/phase2/: __init__.py  compare.py  run.py  sweep.py  variants.py
src/peach_loop/phase3/: __init__.py  actions.py  run.py
tests/: __init__.py  test_digest.py  test_reports.py  test_resume.py
